Fix lightbox close button spacing

--- a/app/assets/stylesheets/lightbox.css
+++ b/app/assets/stylesheets/lightbox.css
@@ -48,6 +48,7 @@
   align-self: start;
   grid-area: 1/1;
   justify-self: end;
+  margin: 1.5rem;
 }
 
 .lightbox__image {
